--- a/app.css
+++ b/app.css
@@ -13,8 +13,14 @@ body {
     display: flex;
     margin: 0;
     height: 100%;
+    background:red;
+    
 }
-
+h1 {
+    margin: 0;
+    transform: rotate(-45deg);
+    text-shadow: 0 0 5px #01579b;
+}
 .container {
     margin: auto;
     padding: 1em;
